--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,16 +396,16 @@
     {
      "data": {
       "text/plain": [
-       "(array([[   10,    88,   202, ...,     0,     0,     0],\n",
-       "        [   79,    23,   121, ...,     0,     0,     0],\n",
-       "        [   56,    10,    26, ...,     0,     0,     0],\n",
+       "(array([[   44,  1620,    86, ...,     0,     0,     0],\n",
+       "        [ 2918, 12031,     3, ...,     0,     0,     0],\n",
+       "        [25542, 10346,    17, ...,     0,     0,     0],\n",
        "        ...,\n",
-       "        [  101,     2, 38152, ...,     0,     0,     0],\n",
-       "        [    4,  1361,   491, ...,     0,     0,     0],\n",
-       "        [   88,    10,   140, ...,     0,     0,     0]], dtype=int64),\n",
-       " array([1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "        1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1,\n",
-       "        0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+       "        [    1,     0,     0, ...,     0,     0,     0],\n",
+       "        [ 1446, 21228,    13, ...,     0,     0,     0],\n",
+       "        [   48,    14,     4, ...,     0,     0,     0]], dtype=int64),\n",
+       " array([0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0,\n",
+       "        1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1,\n",
+       "        1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0],\n",
        "       dtype=int64))"
       ]
      },
@@ -510,16 +510,16 @@
     {
      "data": {
       "text/plain": [
-       "(array([[  11,    7,  200, ...,    0,    0,    0],\n",
-       "        [ 404,  487,   18, ...,    0,    0,    0],\n",
-       "        [   4, 1020,  427, ...,    0,    0,    0],\n",
+       "(array([[  10,  194,  146, ...,    0,    0,    0],\n",
+       "        [   1, 3083,   16, ...,    0,    0,    0],\n",
+       "        [  10,  417,    2, ...,    0,    0,    0],\n",
        "        ...,\n",
-       "        [  38,   47,   85, ...,    0,    0,    0],\n",
-       "        [  10,   41,  176, ...,    0,    0,    0],\n",
-       "        [ 256,  327,    2, ...,    0,    0,    0]], dtype=int64),\n",
-       " array([0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1,\n",
-       "        0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1,\n",
-       "        1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+       "        [ 166,  852,  538, ...,    0,    0,    0],\n",
+       "        [  11,    7,    2, ...,    0,    0,    0],\n",
+       "        [  43,  925,  229, ...,    0,    0,    0]], dtype=int64),\n",
+       " array([0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0,\n",
+       "        1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1,\n",
+       "        1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0],\n",
        "       dtype=int64))"
       ]
      },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -687,22 +687,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.metrics import Precision,Recall,CategoricalAccuracy"
+    "from tensorflow.keras.metrics import Precision,Recall,BinaryAccuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "pre=Precision()\n",
     "re=Recall()\n",
-    "acc=CategoricalAccuracy()"
+    "acc=BinaryAccuracy()"
    ]
   },
   {
@@ -731,16 +731,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision: 0.7300718426704407\n",
-      "Recall: 0.7270869016647339\n",
-      "Categorical Accuracy: 0.043478261679410934\n"
+      "Precision: 0.7335473299026489\n",
+      "Recall: 0.7236738204956055\n",
+      "Binary Accuracy: 0.7280351519584656\n"
      ]
     }
    ],
    "source": [
     "print(f'Precision: {pre.result()}')\n",
     "print(f'Recall: {re.result()}')\n",
-    "print(f'Categorical Accuracy: {acc.result()}')"
+    "print(f'Binary Accuracy: {acc.result()}')"
    ]
   },
   {
