--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -222,24 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def func(data):\n",
-    "    if data=='positive':\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentiment=sentiment.apply(func)"
+    "sentiment=sentiment.apply(lambda x: 1 if x=='positive' else 0)"
    ]
   },
   {
