--- a/notebook_v2.ipynb
+++ b/notebook_v2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 1,
       "metadata": {
         "id": "dyCpO4kDhiw5"
       },
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -203,7 +203,7 @@
               "4  Petter Mattei's \"Love in the Time of Money\" is...  positive"
             ]
           },
-          "execution_count": 139,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -227,14 +227,11 @@
       "outputs": [
         {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "\"One of the other reviewers has mentioned that after watching just 1 Oz episode you'll be hooked. They are right, as this is exactly what happened with me.<br /><br />The first thing that struck me about Oz was its brutality and unflinching scenes of violence, which set in right from the word GO. Trust me, this is not a show for the faint hearted or timid. This show pulls no punches with regards to drugs, sex or violence. Its is hardcore, in the classic use of the word.<br /><br />It is called OZ as that is the nickname given to the Oswald Maximum Security State Penitentary. It focuses mainly on Emerald City, an experimental section of the prison where all the cells have glass fronts and face inwards, so privacy is not high on the agenda. Em City is home to many..Aryans, Muslims, gangstas, Latinos, Christians, Italians, Irish and more....so scuffles, death stares, dodgy dealings and shady agreements are never far away.<br /><br />I would say the main appeal of the show is due to the fact that it goes where other shows wouldn't dare. Forget pretty pictures painted for mainstream audiences, forget charm, forget romance...OZ doesn't mess around. The first episode I ever saw struck me as so nasty it was surreal, I couldn't say I was ready for it, but as I watched more, I developed a taste for Oz, and got accustomed to the high levels of graphic violence. Not just violence, but injustice (crooked guards who'll be sold out for a nickel, inmates who'll kill on order and get away with it, well mannered, middle class inmates being turned into prison bitches due to their lack of street skills or prison experience) Watching Oz, you may become comfortable with what is uncomfortable viewing....thats if you can get in touch with your darker side.\""
             ]
           },
-          "execution_count": 8,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -245,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -276,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -293,7 +290,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -304,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -317,10 +314,7 @@
         {
           "data": {
             "text/html": [
-              "\n",
-              "  <div id=\"df-2c31af4a-d377-4cde-8121-bfab0c3bc506\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
+              "<div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -365,83 +359,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2c31af4a-d377-4cde-8121-bfab0c3bc506')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-2c31af4a-d377-4cde-8121-bfab0c3bc506 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2c31af4a-d377-4cde-8121-bfab0c3bc506');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "</div>"
             ],
             "text/plain": [
               "                                                   review sentiment\n",
@@ -451,7 +369,7 @@
               "freq                                                    5     25000"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -462,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 3,
       "metadata": {
         "id": "Fn2niPUJhiw-"
       },
@@ -497,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 4,
       "metadata": {
         "id": "mErJaBZAhiw-"
       },
@@ -545,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -560,7 +478,7 @@
               "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\"]"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -574,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 15,
       "metadata": {
         "id": "BNMHi6HZhiw_"
       },
@@ -593,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 16,
       "metadata": {
         "id": "3rRdvU8bhiw_"
       },
@@ -604,10 +522,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {
-        "id": "cgsqZcN-hiw_"
-      },
+      "execution_count": 17,
+      "metadata": {},
       "outputs": [],
       "source": [
         "max_tokens=30000\n",
@@ -627,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -642,7 +558,7 @@
               "(TensorShape([50000, 500]), (50000,))"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -655,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 17,
       "metadata": {
         "id": "5IrMT6ZbhixA"
       },
@@ -671,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -698,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -710,22 +626,22 @@
         {
           "data": {
             "text/plain": [
-              "(array([[ 6213,     1,     1, ...,     0,     0,     0],\n",
-              "        [  427,  4880,     1, ...,     0,     0,     0],\n",
-              "        [20901,  2281,     1, ...,     0,     0,     0],\n",
+              "(array([[   11,     1,  1462, ...,     0,     0,     0],\n",
+              "        [   11,  6078,  2514, ...,     0,     0,     0],\n",
+              "        [  137,  1165,  1339, ...,     0,     0,     0],\n",
               "        ...,\n",
-              "        [   60,  2076,     1, ...,     0,     0,     0],\n",
-              "        [   60,     4,  1889, ...,     0,     0,     0],\n",
-              "        [12536,  5088,     1, ...,     0,     0,     0]]),\n",
-              " array([1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1,\n",
-              "        0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1,\n",
-              "        0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0,\n",
-              "        1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1,\n",
-              "        1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1,\n",
-              "        0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0]))"
+              "        [26490,     1,     3, ...,     0,     0,     0],\n",
+              "        [    1,     1,   642, ...,     0,     0,     0],\n",
+              "        [ 5740,     1,  2942, ...,     0,     0,     0]], dtype=int64),\n",
+              " array([1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+              "        1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1,\n",
+              "        1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+              "        1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+              "        0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0,\n",
+              "        1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0], dtype=int64))"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -736,7 +652,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 20,
       "metadata": {
         "id": "hGy1GZl6hixA"
       },
@@ -748,7 +664,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 21,
       "metadata": {
         "id": "6R4bwlx8hixB"
       },
@@ -772,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -785,23 +701,23 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Model: \"model_3\"\n",
+            "Model: \"model\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " input_4 (InputLayer)        [(None, 500)]             0         \n",
+            " input_1 (InputLayer)        [(None, 500)]             0         \n",
             "                                                                 \n",
-            " embedding_1 (Embedding)     (None, 500, 128)          3840128   \n",
+            " embedding (Embedding)       (None, 500, 128)          3840128   \n",
             "                                                                 \n",
-            " dropout_1 (Dropout)         (None, 500, 128)          0         \n",
+            " dropout (Dropout)           (None, 500, 128)          0         \n",
             "                                                                 \n",
-            " bidirectional_2 (Bidirectio  (None, 500, 64)          41216     \n",
+            " bidirectional (Bidirectiona  (None, 500, 64)          41216     \n",
+            " l)                                                              \n",
+            "                                                                 \n",
+            " bidirectional_1 (Bidirectio  (None, 64)               24832     \n",
             " nal)                                                            \n",
             "                                                                 \n",
-            " bidirectional_3 (Bidirectio  (None, 64)               24832     \n",
-            " nal)                                                            \n",
-            "                                                                 \n",
-            " dense_1 (Dense)             (None, 1)                 65        \n",
+            " dense (Dense)               (None, 1)                 65        \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 3,906,241\n",
@@ -846,7 +762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "IdlP83LBhixC"
       },
@@ -1113,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 25,
       "metadata": {
         "id": "f5Hu8lx6UBQx"
       },
@@ -1184,7 +1100,7 @@
       ],
       "source": [
         "model.save('metadata')\n",
-        "tf.keras.models.save_model(model,'models/sentiment_classifier_v2.h5')"
+        "tf.keras.models.save_model(model,'models/sentiment_classifier-2.0.h5')"
       ]
     },
     {
@@ -1195,8 +1111,8 @@
       },
       "outputs": [],
       "source": [
-        "model=tf.keras.models.load_model('models/sentiment_classifier_v2.h5',compile=False)\n",
-        "# model.load_weights('ckpt')\n",
+        "model=tf.keras.models.load_model('models/sentiment_classifier-2.0.h5',compile=False)\n",
+        "model.load_weights('ckpt')\n",
         "model.compile(\n",
         "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.01),\n",
         "    loss=tf.keras.losses.BinaryCrossentropy(),\n",
